syntax = "proto3";
package gobase.v1;

option go_package = "github.com/fizzse/gobase/protoc/v1;v1";

message CreateUserReq {
  string name = 1;
  optional string age = 2;
}

message UserInfo {
  int64 id = 1;
  string name = 2;
  optional string age = 3;
}

service Gobase {
  rpc CreateUser(CreateUserReq) returns (UserInfo) {}
}